# metode-newton-cont

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp  newton_method_continuation.hpp  types.h
